--- a/tweet-stream-kafka-java/pom.xml
+++ b/tweet-stream-kafka-java/pom.xml
@@ -12,6 +12,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
   <dependencies>
@@ -20,8 +22,8 @@
   		<artifactId>kafka-clients</artifactId>
   		<version>2.1.0</version>
   	</dependency>
-  	
-  	<!-- https://mvnrepository.com/artifact/org.twitter4j/twitter4j-core -->
+
+      <!-- https://mvnrepository.com/artifact/org.twitter4j/twitter4j-core -->
 	<dependency>
 	    <groupId>org.twitter4j</groupId>
 	    <artifactId>twitter4j-core</artifactId>
@@ -42,5 +44,12 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+
+      <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-databind</artifactId>
+          <version>2.9.7</version>
+      </dependency>
+
   </dependencies>
 </project>
